--- a/web-app/package.json
+++ b/web-app/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "cloudinary": "^2.9.0",
     "jspdf": "^4.1.0",
+    "lucide-react": "^0.563.0",
+    "motion": "^12.33.0",
     "next": "16.1.6",
     "qrcode": "^1.5.4",
     "react": "19.2.3",
